[gd_scene load_steps=3 format=2]

[ext_resource path="res://code/character_select.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="character_select" type="Node2D"]
script = ExtResource( 1 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ui/Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
size_flags_horizontal = 3

[node name="left_button" type="Button" parent="ui/Control/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "<"

[node name="spacer" type="Control" parent="ui/Control/HBoxContainer"]
margin_left = 104.0
margin_right = 616.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="right_button" type="Button" parent="ui/Control/HBoxContainer"]
margin_left = 620.0
margin_right = 720.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = ">"

[node name="select_button" type="Button" parent="ui/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
grow_vertical = 0
rect_min_size = Vector2( 0, 100 )
text = "SELECT"

[node name="character_1" type="Sprite" parent="."]
position = Vector2( 962, 536 )
scale = Vector2( 5.82813, 5.92188 )
texture = ExtResource( 2 )

[node name="character_2" type="Sprite" parent="."]
position = Vector2( 671, 652 )
scale = Vector2( 1.72656, 1.75433 )
texture = ExtResource( 2 )

[node name="character_3" type="Sprite" parent="."]
position = Vector2( 1289, 660 )
scale = Vector2( 1.72656, 1.75433 )
texture = ExtResource( 2 )
